third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/try_from/invalid_repr.rs
#[derive(derive_more::TryFrom)]
#[try_from(repr)]
#[repr(a + b)]
enum Enum {
    Variant
}

fn main() {}
